Added newly found good refs

--- a/index.html
+++ b/index.html
@@ -510,6 +510,7 @@ This note is aimed at those who are unfamiliar with current identity technologie
 <li> Further Reading
 <ul>
 <li> <a href="http://hueniverse.com/oauth/guide/">The OAuth 1.0 Guide</a></li>
+<li> <a href="https://github.com/Mashape/mashape-oauth/blob/master/FLOWS.md">The OAuth Bible</a></li>
 </ul>
 </li>
 </ul></section>
@@ -597,6 +598,7 @@ This note is aimed at those who are unfamiliar with current identity technologie
 <li> Further Reading
 <ul>
 <li> OAuth 2.0 (<a href="http://tools.ietf.org/html/rfc6749">RFC 6749</a>)</li>
+<li> <a href="https://github.com/Mashape/mashape-oauth/blob/master/FLOWS.md">The OAuth Bible</a></li>
 </ul>
 </li>
 </ul></section>
